--- a/HeThongPhongMachTu/HeThongPhongMachTu/Views/ucKhamBenh_ChoKham.xaml
+++ b/HeThongPhongMachTu/HeThongPhongMachTu/Views/ucKhamBenh_ChoKham.xaml
@@ -56,8 +56,7 @@
                         </Grid>
                     </dxwui:NavigationButton>
 
-                    <dxwui:NavigationButton Command="{Binding ShowSomethingCommand}"
-                        DockPanel.Dock="Top" NavigateTo="ucKhamBenh_DaKham">
+                    <dxwui:NavigationButton DockPanel.Dock="Top" NavigateTo="ucKhamBenh_DaKham">
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition/>
@@ -92,7 +91,8 @@
                     </ComboBox>-->
 
                     <Border BorderBrush="Gray" BorderThickness="1">
-                        <ListView x:Name="listViewDSChoKham" 
+                        <ListView ItemsSource="{Binding ListbenhNhans, UpdateSourceTrigger=PropertyChanged}"
+                                  ScrollViewer.HorizontalScrollBarVisibility="Disabled" x:Name="listViewDSChoKham" 
                               HorizontalContentAlignment="Center">
                             <ListView.Resources>
                                 <Style TargetType="{x:Type GridViewColumnHeader}">
