--- a/HeThongPhongMachTu/HeThongPhongMachTu/ResourcesXAML/MyResources.xaml
+++ b/HeThongPhongMachTu/HeThongPhongMachTu/ResourcesXAML/MyResources.xaml
@@ -18,4 +18,5 @@
     <viewmodel:NhaThuoc_ChoNhanThuocViewModel x:Key="NhaThuoc_ChoNhanThuocVM"></viewmodel:NhaThuoc_ChoNhanThuocViewModel>
     <viewmodel:NhaThuoc_ThuocTrongKhoViewModel x:Key="NhaThuoc_ThuocTrongKhoVM"></viewmodel:NhaThuoc_ThuocTrongKhoViewModel>
     <viewmodel:QuanLy_NhanVienViewModel x:Key="QuanLy_NhanVienVM"></viewmodel:QuanLy_NhanVienViewModel>
+    <viewmodel:QuanLy_PhieuThuChiViewModel x:Key="QuanLy_PhieuThuChiVM"></viewmodel:QuanLy_PhieuThuChiViewModel>
 </ResourceDictionary>
