--- a/HeThongPhongMachTu/HeThongPhongMachTu/Views/ucQuanLy_TaoPhieuThuChi.xaml
+++ b/HeThongPhongMachTu/HeThongPhongMachTu/Views/ucQuanLy_TaoPhieuThuChi.xaml
@@ -7,7 +7,9 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:dxwui="http://schemas.devexpress.com/winfx/2008/xaml/windowsui"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             DataContext="{StaticResource QuanLy_PhieuThuChiVM}"
+             >
     <UserControl.Resources>
         <Style TargetType="Image">
             <Setter Property="RenderOptions.BitmapScalingMode" Value="HighQuality"/>
@@ -131,7 +133,9 @@
                     </ComboBox>
 
                     <Border BorderBrush="Gray" BorderThickness="1">
-                        <ListView x:Name="listViewDSChoKham" 
+                        <ListView x:Name="listViewPhieuThuChi"
+                                  ItemsSource="{Binding ListPhieuThuChi, UpdateSourceTrigger=PropertyChanged}"
+                                  ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                               HorizontalContentAlignment="Center">
                             <ListView.Resources>
                                 <Style TargetType="{x:Type GridViewColumnHeader}">
