--- a/HeThongPhongMachTu/HeThongPhongMachTu/Views/ucQuanLy_ThongKe.xaml
+++ b/HeThongPhongMachTu/HeThongPhongMachTu/Views/ucQuanLy_ThongKe.xaml
@@ -3,9 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"   
              xmlns:local="clr-namespace:HeThongPhongMachTu.Views"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:dxwui="http://schemas.devexpress.com/winfx/2008/xaml/windowsui"
              mc:Ignorable="d" 
+             DataContext="{StaticResource QuanLy_ThongKeVM}"
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <Style TargetType="Image">
@@ -124,24 +127,60 @@
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
                     <Grid Grid.Column="0">
-                        <Border BorderBrush="Gray" BorderThickness="1">
-                            <ListView x:Name="listViewDSChoKham" 
+
+                        <DockPanel LastChildFill="True">
+
+                            <Grid DockPanel.Dock="Top">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition/>
+                                </Grid.ColumnDefinitions>
+
+                                <DatePicker Grid.Column="0" Name="textBoxNgayBatDau"
+                                    materialDesign:HintAssist.Hint="Ngày bắt đầu"
+                                    Style="{StaticResource MaterialDesignFloatingHintDatePicker}">
+                                    <i:Interaction.Triggers>
+                                        <i:EventTrigger EventName="SelectedDateChanged">
+                                            <i:InvokeCommandAction Command="{Binding UpdateNgayBatDauCommand}"
+                                                                   CommandParameter="{Binding ElementName=textBoxNgayBatDau}"
+                                                               />
+                                        </i:EventTrigger>
+                                    </i:Interaction.Triggers>
+                                </DatePicker>
+
+                                <DatePicker Grid.Column="1" Name="textBoxNgayKetThuc"
+                                    materialDesign:HintAssist.Hint="Ngày kết thúc"
+                                    Style="{StaticResource MaterialDesignFloatingHintDatePicker}" >
+                                    <i:Interaction.Triggers>
+                                        <i:EventTrigger EventName="SelectedDateChanged">
+                                            <i:InvokeCommandAction Command="{Binding UpdateNgayKetThucCommand}"
+                                                                   CommandParameter="{Binding ElementName=textBoxNgayKetThuc}"/>
+                                        </i:EventTrigger>
+                                    </i:Interaction.Triggers>
+                                </DatePicker>
+                                
+                                
+                            </Grid>
+
+                            <Border BorderBrush="Gray" BorderThickness="1">
+                                <ListView x:Name="listViewDSChoKham" 
                               HorizontalContentAlignment="Center">
-                                <ListView.Resources>
-                                    <Style TargetType="{x:Type GridViewColumnHeader}">
-                                        <Setter Property="HorizontalContentAlignment" Value="Center" />
-                                    </Style>
-                                </ListView.Resources>
-                                <ListView.View>
-                                    <GridView>
-                                        <GridViewColumn Header="Mã" Width="50" DisplayMemberBinding="{Binding MaPhieu}" />
-                                        <GridViewColumn Header="Thời gian" Width="100" DisplayMemberBinding="{Binding NgayLap}" />
-                                        <GridViewColumn Header="Loại" Width="100" DisplayMemberBinding="{Binding LoaiPhieu}" />
-                                        <GridViewColumn Header="Giá trị" Width="60" DisplayMemberBinding="{Binding GiaTri}" />
-                                    </GridView>
-                                </ListView.View>
-                            </ListView>
-                        </Border>
+                                    <ListView.Resources>
+                                        <Style TargetType="{x:Type GridViewColumnHeader}">
+                                            <Setter Property="HorizontalContentAlignment" Value="Center" />
+                                        </Style>
+                                    </ListView.Resources>
+                                    <ListView.View>
+                                        <GridView>
+                                            <GridViewColumn Header="Mã" Width="50" DisplayMemberBinding="{Binding MaPhieu}" />
+                                            <GridViewColumn Header="Thời gian" Width="100" DisplayMemberBinding="{Binding NgayLap}" />
+                                            <GridViewColumn Header="Loại" Width="100" DisplayMemberBinding="{Binding LoaiPhieu}" />
+                                            <GridViewColumn Header="Giá trị" Width="60" DisplayMemberBinding="{Binding GiaTri}" />
+                                        </GridView>
+                                    </ListView.View>
+                                </ListView>
+                            </Border>
+                        </DockPanel>
                     </Grid>
 
                     <!--bieu do thong ke-->
@@ -178,7 +217,12 @@
                                        FontWeight="Normal"/>
                         </Grid>
                     </Grid>
-
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="Click">
+                            <i:InvokeCommandAction Command="{Binding ShowSomeThing}"
+                                                                  />
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
                 </Button>
 
             </DockPanel>
